--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,21 +19,25 @@
 </head>
 <body class="text-center" style="display: flex;align-items: center;">
 <div class="form-signin">
-    <svg class="bi bi-heart-half icon-color padding-0-0-10-0" width="72" height="72" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+    <svg class="bi bi-heart-half icon-color padding-0-0-10-0" width="72" height="72" viewBox="0 0 16 16"
+         fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M8 1.314C3.562-3.248-7.534 4.735 8 15V1.314z"/>
-        <path fill-rule="evenodd" d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+        <path fill-rule="evenodd"
+              d="M8 2.748l-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
     </svg>
     <h1 class="h5 mb-3 font-weight-normal padding-5">登录</h1>
     <label for="username" class="sr-only"></label>
-    <input type="text" name="username" id="username" class="form-control input-bottom-radius" placeholder="用户名" required autofocus>
+    <input type="text" name="username" id="username" class="form-control input-bottom-radius" placeholder="用户名" required
+           autofocus>
     <label for="password" class="sr-only"></label>
-    <input type="password" name="password" id="password" class="form-control input-top-radius" placeholder="密码" required>
+    <input type="password" name="password" id="password" class="form-control input-top-radius" placeholder="密码"
+           required>
     <div>
         <div class="text-left padding-10">
             <input type="checkbox" value="remember-me"> 记住我
         </div>
     </div>
-    <button type="button" class="btn btn-lg btn-primary btn-block">登录</button>
+    <button type="button" class="btn btn-lg btn-primary btn-block" onclick="login()">登录</button>
     <div>
         <div class="text-right padding-10-0-0-0">
             <label>注册</label>
@@ -44,5 +48,10 @@
 <script th:src="@{/jquery/jquery-3.3.1.slim.min.js}"></script>
 <script th:src="@{/popper/popper.min.js}"></script>
 <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+<script>
+    function login() {
+        window.location.href = "http://localhost:8080/abdp/main";
+    }
+</script>
 </body>
 </html>
